client/src/components/sidebar/sidebar.css
.toolbar {
    height: 8vh;
    background-color: rgb(24, 24, 24);
    padding: 5px;
    display: flex;
    align-items: center;
    justify-content: space-between;
    position: fixed;
    top: 0;
    z-index: 100;
}

.toolbar #notification-count {
    width: auto;
    height: auto;
}

.toolbar span {
    width: 30px;
    height: 30px;
}

.toolbar button i {
    font-size: 1rem;
}

@media (max-width: 769px) {
    .toolbar h1 {
        margin-left: 3rem;
    }
}

.sidebar {
    height: 100dvh;
    width: 18vw;
    background-color: rgb(24, 24, 24);
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 3rem;
    transition: all 0.3s ease-in-out;
    position: sticky;
    top: 0;
    z-index: 999;
}

.sidebar #logo {
    margin-top: -2rem;
    cursor: pointer;
    height: 20vh;
    margin-right: 3rem;
}

.sidebar i {
    color: #a3a3a3;
}

.sidebar .profile {
    display: flex;
    align-items: center;
    width: 100%;
    justify-content: space-around;
    margin-bottom: 2rem;
}

.sidebar .profile i {
    transition: all 0.2s ease-in-out;
}

.sidebar .profile i:hover {
    transform: rotate(60deg);
}

.sidebar .menu-items .dropdown-container {
    gap: 1rem;
    flex-direction: column;
    justify-content: center;
    width: 100%;
    border-left: 1px solid gray;
    margin-left: 15px;
}

.sidebar .menu-items .dropdown-container p {
    margin-left: 1rem;
}

.sidebar .items .drop-down {
    display: flex;
    width: 100%;
    align-items: center;
    justify-content: space-between;
}

.fa-caret-down {
    text-align: end;
}

.sidebar .menu-items {
    display: flex;
    flex-direction: column;
    width: 90%;
    align-items: flex-start;
    gap: 1rem;
}

.sidebar .menu-items .items {
    display: flex;
    gap: 1rem;
    cursor: pointer;
    width: 100%;
    align-items: center;
    padding-left: 5px;

}

.sidebar #add-btn {
    position: absolute;
    bottom: 16px;
    width: 85%;
}

@media (min-width: 769px) {

    .sidebar i.fa-bars,
    .sidebar i.fa-xmark {
        display: none;
    }

}

@media (max-width: 769px) {
    .sidebar {
        position: fixed;
        height: 100%;
        width: 60vw;
        gap: 2rem;
        z-index: 999;
    }

    .sidebar i.fa-bars,
    .sidebar i.fa-xmark {
        position: absolute;
        right: -40px;
        background-color: rgb(26, 26, 26);
        font-size: 1.5rem;
        padding: 15px;
        border-radius: 15px;
    }

    .sidebar #logo,
    .sidebar .profile i {
        display: none;
    }

    .sidebar .profile {
        margin-top: 1rem;
        justify-content: center;
        gap: 1rem;
    }

    .sidebar .profile-container {
        top: 0 !important;
    }

    .sidebar .menu-items {
        margin-top: 1rem;
    }

}

